--- a/index.html
+++ b/index.html
@@ -1,13 +1,76 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
+<!doctype html>
+<html lang="en">
 
 <head>
+  <!-- Required meta tags -->
   <meta charset="utf-8">
-  <title>f</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="css/flip.css">
+  <link rel="stylesheet" href="css/master.css">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+  <title>Feliz Navidad</title>
 </head>
 
 <body>
-  f
+  <div class="container-fluid lines">
+    <div class="row text-center fixed-top">
+      <h1 class="outside-text col-md-12">Y el ganador es:</h1>
+    </div>
+    <div class="row">
+
+
+      <div class="card-container col-md-12 ml-4 mt-10">
+        <div class="card row">
+
+
+
+          <div class="front col-md-12">
+            <div class="row">
+              <h4>Toque aquí para revelar</h4>
+            </div>
+          </div>
+
+
+
+
+          <div class="back col-md-12">
+
+            <div class="row text-center">
+              <h4 class="bold" id="reveal">Buen intento, <br> vuelva a intentar <br> en navidad</h4>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+
+    </div>
+    <div class="row text-center fixed-bottom">
+      <h4 class="outside-text col-md-12">(Sólo válido en navidad)</h4>
+    </div>
+
+
+
+    <!--
+   -->
+
+  </div>
+
+
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/color-thief/2.3.0/color-thief.umd.js"></script>
+
+  <script src="app.js"></script>
+
 </body>
 
 </html>
